--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,1 +1,4 @@
-<h1>THIS IS THE CLIENT INDEX PAGE</h1>
+<h1>View all clients:</h1>
+<% @clients.each do |client| %>
+	<p><%= client.name %></p>
+<% end %>
