--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -1,8 +1,11 @@
 <h3>Edit Client Information</h3>
 
 <%= form_for(@client) do |f| %>
-  <label>Name: </label> <br>
-  <%= f.text_field :name %><br>
+  <label>First Name: </label> <br>
+  <%= f.text_field :first_name %><br>
+
+  <label>Last Name: </label> <br>
+  <%= f.text_field :last_name %><br>
 
   <label>E-mail: </label> <br>
   <%= f.text_field :email %><br>
