--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @client.name %></h1>
+<h1><%= @client.first_name.capitalize @client.last_name.capitalize %></h1>
 
 <ul>
   <li><%= @client.email %></li>
