--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,16 +1,13 @@
 <h3>New Client Entry Form</h3>
 
 <%= form_for(@client) do |f| %>
-  <label>First Name: </label> <br>
-  <%= f.text_field :first_name %><br>
+  <label>First Name: </label> <%= f.text_field :first_name %><br>
 
-  <label>Last Name: </label> <br>
-  <%= f.text_field :last_name %><br>
+  <label>Last Name: </label> <%= f.text_field :last_name %><br>
 
-  <label>E-mail: </label> <br>
-  <%= f.text_field :email %><br>
+  <label>E-mail: </label> <%= f.text_field :email %><br>
 
-  <label>Phone Number: </label> <br>
+  <label>Phone Number (digits only): </label>
   <%= f.text_field :phone_number %><br>
 
   <%= f.submit %>
