--- a/app/views/facials/index.html.erb
+++ b/app/views/facials/index.html.erb
@@ -1,1 +1,13 @@
 <h1>All Facial Appointments</h1>
+
+
+<%@facials.each do |facial|%>
+  <label>Client: </label><%=link_to facial.client.full_name, client_path(facial.client_id) %><br />
+
+  <label>Date: </label><%=facial.facial_date.strftime("%A, %b %d, %Y")%><br>
+  <label>Time: </label><%=facial.facial_time.strftime("%I:%M %p")%><br>
+
+  <p>Esthetician: <%= link_to facial.esthetician.email, esthetician_path(facial.esthetician_id) %></p>
+
+
+<%end%>
