--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,5 +1,21 @@
 <h3>New Client Entry Form</h3>
 
+<% if @client.errors.any? %>
+  <div id="error_explanation">
+    <h2>
+      <%= pluralize(@client.errors.count, "error") %>
+      prohibited this post from being saved:
+    </h2>
+
+    <ul>
+    <% @client.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
+
 <%= form_for(@client) do |f| %>
   <label>First Name: </label> <%= f.text_field :first_name %><br>
 
