added form_for validations to facial new page
added form_for validations to facial new page

--- a/app/views/facials/new.html.erb
+++ b/app/views/facials/new.html.erb
@@ -1,5 +1,20 @@
 <h1>Create New Facial Booking</h1>
 
+<% if @facial.errors.any? %>
+  <div id="error_explanation">
+    <h2>
+      <%= pluralize(@facial.errors.count, "error") %>
+      prohibited this post from being saved:
+    </h2>
+
+    <ul>
+    <% @facial.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <%= form_for(@facial) do |f| %>
   <label>Date:</label> <br>
   <%= f.date_field :facial_date %><br>
