--- a/app/views/facials/show.html.erb
+++ b/app/views/facials/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Facials Show Page</h1>
+<h1>Appointment Information</h1>
 
   <label>Date: </label><%=@facial.facial_date.strftime("%A, %b %d, %Y")%><br>
   <label>Time: </label><%=@facial.facial_time.strftime("%I:%M %p")%><br>
