changed link_to to button_to
"Rails thinks that button_to is a safer tool for representing delete requests"

--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -3,6 +3,6 @@
 	<p><%= link_to client.first_name.capitalize, client_path(client)%></p>
 	<p>Number of Appointments: <%= client.facials.count %></p>
 	<div class="client">
-    <%= link_to "Delete Client", client, method: :delete, data: { confirm: "Are you sure?" } %>
+    <%= button_to "Delete Client", client, method: :delete, data: { confirm: "Are you sure?" } %>
   </div>
 <% end %>
