--- a/app/views/estheticians/index.html.erb
+++ b/app/views/estheticians/index.html.erb
@@ -4,6 +4,6 @@
   <%@estheticians.each do |esthetician|%>
     <p><%=esthetician.email%></p>
     <div class="esthetician">
-      <%= link_to "Delete Esthetician", esthetician, method: :delete, data: { confirm: "Are you sure?" } %>
+      <%= button_to "Delete Esthetician", esthetician, method: :delete, data: { confirm: "Are you sure?" } %>
     </div>
   <%end%>
