--- a/app/views/facials/index.html.erb
+++ b/app/views/facials/index.html.erb
@@ -10,7 +10,7 @@
   <p>Esthetician: <%= link_to facial.esthetician.email, esthetician_path(facial.esthetician_id) %></p>
 
   <div class="facial">
-    <%= link_to "Delete Appointment", facial, method: :delete, data: { confirm: "Are you sure?" } %>
+    <%= button_to "Delete Appointment", facial, method: :delete, data: { confirm: "Are you sure?" } %>
   </div>
 
 
