--- a/app/views/facials/show.html.erb
+++ b/app/views/facials/show.html.erb
@@ -69,8 +69,8 @@
 
   <p>Client Name: <%=link_to @facial.client.full_name, client_path(@facial.client) if @facial.client %></p>
         <ul>
-          <li>Email:<%=@facial.client.email%>  </li>
-          <li>Name:<%=@facial.client.phone_number%></li>
+          <li>Email: <%=@facial.client.email%>  </li>
+          <li>Phone Number: <%=@facial.client.phone_number%></li>
         </ul>
 
 
