--- a/app/views/facials/show.html.erb
+++ b/app/views/facials/show.html.erb
@@ -3,7 +3,7 @@
   <label>Date: </label><%=@facial.facial_date.strftime("%A, %b %d, %Y")%><br>
   <label>Time: </label><%=@facial.facial_time.strftime("%I:%M %p")%><br>
 
-  <h3>Client's Skincare Concerns</h3>
+  <h2>Client's Skincare Concerns</h2>
 
   <p>
     <%if @facial.acne == true%>
@@ -65,15 +65,14 @@
     <%end%>
   </p>
 
-  <h4> Client Information </h4>
+  <h3> Client Information </h3>
 
-  <p>Client Name: <%=link_to @facial.client.full_name, client_path(@facial.client) if @facial.client %></p>
+  <p><strong>Client Name: </strong> <%=link_to @facial.client.full_name, client_path(@facial.client) if @facial.client %></p>
         <ul>
           <li>Email: <%=@facial.client.email%>  </li>
           <li>Phone Number: <%=@facial.client.phone_number%></li>
         </ul>
 
-
-  <h4> Esthetician Information</h4>
+  <h3>Esthetician Information: </h3>
       <p>Email: <%=link_to @facial.esthetician.email, esthetician_path(@facial.esthetician) if @facial.esthetician %>  </p>
   </p>
