--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -2,9 +2,7 @@
 <!--show all client's appointments-->
 
 
-
-
-<h3><%= pluralize(@client.facials.count, 'Facial Appointment') %></h3>
+<h3>Has <%= pluralize(@client.facials.count, 'Facial Appointment') %></h3>
 <ul>
   <% @client.facials.each do |f| %>
     <li><%= link_to f.facial_date, facial_path(f) %></li>
