still trying to implement a search function

--- a/app/views/facials/show.html.erb
+++ b/app/views/facials/show.html.erb
@@ -60,7 +60,7 @@
   </p>
 
   <p>
-    <%if @facial.other%>
+    <%if @facial.other != ""%>
       <p>Other Comments: <%=@facial.other%>  </p>
     <%end%>
   </p>
