--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,12 +1,6 @@
 
-<h1>All Clients:</h1>
+<h1>All Clients:</h1><br />
 
-<%= form_tag clients_path, method: :get do %>
-  <p>
-    <%= text_field_tag :query, params[:query] %>
-    <%= submit_tag "Search", full_name: nil %>
-  </p>
-<% end %>
 
 <% @clients.each do |client| %>
 	<p><%= link_to client.full_name, client_path(client)%></p>
