--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -2,10 +2,13 @@
 <h1>All Clients:</h1>
 
 
+<%= form_tag clients_path, method: :get do %>
+  <p>
+    <%= text_field_tag :query, params[:query] %>
+    <%= submit_tag "Search By Client", name: nil %>
+  </p>
+<% end %>
+
 <% @clients.each do |client| %>
-	<p><%= link_to client.full_name, client_path(client)%></p>
-	<p>Number of Appointments: <%= client.facials.count %></p>
-	<div class="client">
-    <%= button_to "Delete Client", client, method: :delete, data: { confirm: "Are you sure?" } %>
-  </div>
+  <%= render partial: 'client', locals: {client: client} %>
 <% end %>
