--- a/app/views/facials/index.html.erb
+++ b/app/views/facials/index.html.erb
@@ -7,11 +7,10 @@
   <label>Date: </label><%=link_to facial.facial_date.strftime("%A, %b %d, %Y"), facial_path(facial)%><br>
   <label>Time: </label><%=facial.facial_time.strftime("%I:%M %p")%><br>
 
-  <p>Esthetician: <%= link_to facial.esthetician.email, esthetician_path(facial.esthetician_id) %></p>
+  <h3>by: <%= link_to facial.esthetician.email, esthetician_facials_path(facial.esthetician) %></h3>
 
   <div class="facial">
     <%= button_to "Delete Appointment", facial, method: :delete, data: { confirm: "Are you sure?" } %>
   </div>
-
 
 <%end%>
