--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -1,1 +1,6 @@
-<h1>Welcome to The Facial Manager</h1>
+
+  <h1>Welcome to The Facial Manager</h1>
+
+  <%= link_to "Sign In", new_esthetician_session_path, method: :get %>
+  <%= link_to "Sign Out", destroy_esthetician_session_path, method: :delete %>
+  <%= link_to "Sign Up", new_esthetician_registration_path, method: :get %>
