--- a/app/views/estheticians/index.html.erb
+++ b/app/views/estheticians/index.html.erb
@@ -2,8 +2,11 @@
 
 
   <%@estheticians.each do |esthetician|%>
-    <p><%=esthetician.email%></p>
-    <div class="esthetician">
-      <%= button_to "Delete Esthetician", esthetician, method: :delete, data: { confirm: "Are you sure?" } %>
-    </div>
+    <p><%=link_to esthetician.email, esthetician_path(esthetician)%></p>
+
+    <%if esthetician == current_esthetician %>
+      <div class="esthetician">
+        <%= button_to "Delete Esthetician", esthetician, method: :delete, data: { confirm: "Are you sure?" } %>
+      </div>
+      <%end%>
   <%end%>
