--- a/app/views/facials/index.html.erb
+++ b/app/views/facials/index.html.erb
@@ -3,14 +3,16 @@
 
 <%@facials.each do |facial|%>
   <label>Client: </label><%=link_to facial.client.full_name, client_path(facial.client_id) %><br />
-
   <label>Date: </label><%=link_to facial.facial_date.strftime("%A, %b %d, %Y"), facial_path(facial)%><br>
   <label>Time: </label><%=facial.facial_time.strftime("%I:%M %p")%><br>
-
   <h3>by: <%= link_to facial.esthetician.email, esthetician_facials_path(facial.esthetician) %></h3>
 
   <div class="facial">
-    <%= button_to "Delete Appointment", facial, method: :delete, data: { confirm: "Are you sure?" } %>
+    <% if facial.esthetician == current_esthetician %>
+      <%= button_to "Delete Appointment", facial, method: :delete, data: { confirm: "Are you sure?" } %>
+    <%end%>
   </div>
+
+  <br />
 
 <%end%>
