--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,18 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
+    <% if esthetician_signed_in? %>
+      <div class="topnav">
+        <%= link_to 'Profile', edit_esthetician_registration_path %>
+        <%= link_to 'Log out', destroy_esthetician_session_path, method: :delete %>
+      </div>
+    <% else %>
+      <div class="topnav">
+        <%= link_to 'Log In', new_esthetician_session_path %>
+        <%= link_to 'Sign Up', new_esthetician_registration_path %>
+      </div>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
