--- a/app/views/facials/index.html.erb
+++ b/app/views/facials/index.html.erb
@@ -5,7 +5,7 @@
   <label>Client: </label><%=link_to facial.client.full_name, client_path(facial.client_id) %><br />
   <label>Date: </label><%=link_to facial.facial_date.strftime("%A, %b %d, %Y"), facial_path(facial)%><br>
   <label>Time: </label><%=facial.facial_time.strftime("%I:%M %p")%><br>
-  <h3>by: <%= link_to facial.esthetician.email, esthetician_facials_path(facial.esthetician) %></h3>
+  <h3>Booked With: <%= link_to facial.esthetician.email, esthetician_facials_path(facial.esthetician) %></h3>
 
   <div class="facial">
     <% if facial.esthetician == current_esthetician %>
