--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>TheFacialManager</title>
     <%= csrf_meta_tags %>
@@ -7,6 +7,7 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   <head/>
 
 
@@ -14,19 +15,41 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-    <% if esthetician_signed_in? %>
-      <div class="topnav">
-        <%= link_to 'All Clients', clients_path %>
-        <%= link_to 'All Facial Appointments', facials_path %>
-        <%= link_to 'Your Profile', edit_esthetician_registration_path %>
-        <%= link_to 'Log out', destroy_esthetician_session_path, method: :delete %>
-      </div>
-    <% else %>
-      <div class="topnav">
-        <%= link_to 'Log In', new_esthetician_session_path %>
-        <%= link_to 'Sign Up', new_esthetician_registration_path %>
-      </div>
-    <% end %>
+    <header class="container">
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <%= link_to "Welcome to the Facial Appointment Manager", root_path, class: "navbar-brand" %>
+          <div>
+
+          <ul class="nav navbar-nav navbar-right">
+            <% if esthetician_signed_in? %>
+              <li><%= link_to 'All Clients', clients_path %></li>
+              <li><%= link_to 'All Facial Appointments', facials_path %></li>
+              <li><%= link_to 'All Your Facial Appointments', esthetician_facials_path(@esthetician) %>
+              <li><%= link_to 'Your Profile', edit_esthetician_registration_path %></li>
+              <li><%= link_to 'Log out', destroy_esthetician_session_path, method: :delete %></li>
+            <% else %>
+              <li><%= link_to 'Log In', new_esthetician_session_path %></li>
+              <li><%= link_to 'Sign Up', new_esthetician_registration_path %></li>
+            <% end %>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+    <section class="container">
+     <div id="flash">
+       <% flash.each do |key, value| %>
+         <div class="flash alert <%= alert_class(key) %>"><%= value %></div>
+       <% end %>
+     </div>
+     <%= yield %>
+   </section>
+ </body>
+</html>
+
+
 
     <%= yield %>
   </body>
