--- a/app/views/facials/index.html.erb
+++ b/app/views/facials/index.html.erb
@@ -1,19 +1,26 @@
-<h1>All Facial Appointments</h1>
+<div class="title-container">
+  <h1>All Facial Appointments</h1>
+</div>
 
 
-<%@facials.each do |facial|%>
-
-    <label>Client: </label><%=link_to facial.client.full_name, client_path(facial.client_id) %><br />
-    <label>Date: </label><%=link_to facial.facial_date.strftime("%A, %b %d, %Y"), facial_path(facial)%><br>
-    <label>Time: </label><%=facial.facial_time.strftime("%I:%M %p")%><br>
-    <h3>Booked With: <%= link_to facial.esthetician.email, esthetician_facials_path(facial.esthetician) %></h3>
-
+<div class="facials">
+  <%@facials.each do |facial|%>
     <div class="facial">
-      <% if facial.esthetician == current_esthetician %>
-        <%= button_to "Delete Appointment", facial, method: :delete, data: { confirm: "Are you sure?" } %>
-      <%end%>
+      <div class="thumbnail">
+        <div class="caption">
+
+            <label>Client: </label><%=link_to facial.client.full_name, client_path(facial.client_id) %><br />
+            <label>Date: </label><%=link_to facial.facial_date.strftime("%A, %b %d, %Y"), facial_path(facial)%><br>
+            <label>Time: </label><%=facial.facial_time.strftime("%I:%M %p")%><br>
+            <h4>Booked With: <%= link_to facial.esthetician.email, esthetician_facials_path(facial.esthetician) %></h4>
+
+            <div class="facial">
+              <% if facial.esthetician == current_esthetician %>
+                <%= button_to "Delete Appointment", facial, method: :delete, data: { confirm: "Are you sure?" } %>
+              <%end%>
+            </div>
+          </div>
     </div>
-
-    <br />
-
-<%end%>
+  </div>
+<% end %>
+</div>
