--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,8 +25,10 @@
           <ul class="nav navbar-nav navbar-right">
             <% if esthetician_signed_in? %>
               <li><%= link_to 'All Clients', clients_path %></li>
-              <li><%= link_to 'All Facial Appointments', facials_path %></li>
-              <li><%= link_to 'All Your Facial Appointments', esthetician_facials_path(@esthetician) %>
+              <li><%= link_to 'New Client', new_client_path%></li>
+              <li><%= link_to 'All Facials', facials_path %></li>
+              <li><%= link_to 'Your Facials', esthetician_facials_path(@esthetician) %>
+              <li><%= link_to "New Facial Appointment", new_esthetician_facial_path(@esthetician) %></li>
               <li><%= link_to 'Your Profile', edit_esthetician_registration_path %></li>
               <li><%= link_to 'Log out', destroy_esthetician_session_path, method: :delete %></li>
             <% else %>
@@ -37,6 +39,14 @@
         </div>
       </nav>
     </header>
+
+    <section class="container">
+      <div id="flash">
+        <% flash.each do |key, value| %>
+          <div class="flash alert <%= alert_class(key) %>"><%= value %></div>
+        <% end %>
+      </div>
+
 
     <%= yield %>
   </body>
