--- a/app/views/facials/new.html.erb
+++ b/app/views/facials/new.html.erb
@@ -1,2 +1,5 @@
-<h1>Create New Facial Booking</h1>
+<div class="title-container">
+  <h1>Create New Facial Booking</h1>
+  </div>
+
 <%=render 'form'%>
